[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rosm"
version = "0.1.0"
description = "ROS2 process, node, and topic manager with TUI dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Vector Robotics"}]
dependencies = [
    "click>=8.0",
    "psutil>=5.9",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
tui = ["textual>=0.80"]
dev = [
    "rosm[tui]",
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
]

[project.scripts]
rosm = "rosm.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["rosm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires ROS2 environment",
    "e2e: end-to-end test with live ROS2 nodes",
]
addopts = "-p no:launch_ros -p no:launch_testing -p no:ament_copyright -p no:ament_flake8 -p no:ament_pep257 -p no:ament_xmllint -p no:ament_lint"

[tool.coverage.run]
source = ["rosm"]
omit = [
    "rosm/tui/*",
    "rosm/cli.py",
    "rosm/engine/*",
    "rosm/probes/graph_probe.py",
    "rosm/_compat.py",
]

[tool.coverage.report]
fail_under = 80
